Update note on Ch 14 code

--- a/resources/examples/ch14_code.ipynb
+++ b/resources/examples/ch14_code.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "**Original Code Credit:**: Shmueli, Galit; Bruce, Peter C.; Gedeck, Peter; Patel, Nitin R.. Data Mining for Business Analytics Wiley.\n",
     "\n",
-    "*Modifications* have been made from the original textbook examples to account for verion changes in library dependencies and/or for clarity."
+    "*Modifications* have been made from the original textbook examples due to version changes in library dependencies and/or for clarity."
    ]
   },
   {
