Chapter code example updates

--- a/resources/examples/ch14_code.ipynb
+++ b/resources/examples/ch14_code.ipynb
@@ -15,14 +15,8 @@
    "source": [
     "**Original Code Credit:**: Shmueli, Galit; Bruce, Peter C.; Gedeck, Peter; Patel, Nitin R.. Data Mining for Business Analytics Wiley.\n",
     "\n",
-    "*Modifications* have been made from the original textbook examples due to version changes in library dependencies and/or for clarity."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "595105b4-2bfc-46f0-82af-8dbf7343201e",
-   "metadata": {},
-   "source": [
+    "*Modifications* have been made from the original textbook examples due to version changes in library dependencies and/or for clarity.\n",
+    "\n",
     "Download this notebook and data [**here**](https://github.com/dcyoung23/msba511/resources/examples)."
    ]
   },
